--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Todo-List</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -43,6 +43,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <script src="https://kit.fontawesome.com/62b7a3b826.js" crossorigin="anonymous"></script>
+    <!-- <script src="https://kit.fontawesome.com/62b7a3b826.js"></script> -->
   </body>
 </html>
